--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "simplecounter",
+  "homepage": "https://chandrashekar1004.github.io/simpleTools_/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,9 +8,12 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d dist"
   },
   "dependencies": {
+    "gh-pages": "^6.3.0",
     "luxon": "^3.5.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
