--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "simplecounter",
-  "homepage": "https://chandrashekar1004.github.io/simpleTools_/",
+  "homepage": "https://chandrashekar1004.github.io/simpleTools/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,8 +9,8 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d dist"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "gh-pages": "^6.3.0",
